<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kocak Hub</string>

    <!--    ACTIVITY GET STARTED-->
    <string name="txt_desc">Share your funny meme or pic on only one platform. You can share and create it anytime and anywhere</string>
    <string name="btn_getstarted">Get Started</string>

    <!--    ACTIVITY LOGIN  -->
    <string name="txt_welcome">Welcome Back!</string>
    <string name="login_desc">Please sign in your account</string>
    <string name="edit_email">E-mail</string>
    <string name="edit_password">Password</string>
    <string name="btn_forgetpassword">Forget Password?</string>
    <string name="btn_signin">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="btn_register">Register</string>

    <!--    ACTIVITY FORGOT PASSWORD-->
    <string name="txt_reset">Forget Password</string>
    <string name="reset_desc">Enter your email to send password reset</string>
    <string name="back_signin">Back to sign in</string>
    <string name="btn_reset">Send Request</string>

    <!--    ACTIVITY REGISTER  -->
    <string name="txt_regist">Create New Account</string>
    <string name="register_desc">Fill in the form to regist your account</string>
    <string name="edit_username">Username</string>
    <string name="edit_repeatpassword">Repeat Password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="have_account">Have an account?</string>
    <string name="btn_login">Sign In</string>

    <!--    ACTIVITY HOME-->
    <string name="btn_profile">Profile</string>
    <string name="btn_home">Home</string>
    <string name="btn_myplaylist">My Playlist</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>