<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="120dp">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txt_welcome"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_logindesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_welcome"
        android:layout_centerInParent="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login_desc"
        android:textColor="@color/black20"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_logindesc"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="80dp"
        android:background="@color/secondarycolor"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/secondarycolor"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />

    <TextView
        android:id="@+id/btnForgotPassword"
        android:layout_below="@id/edit_password"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black20"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_forgetpassword"
        />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnsignin"
        android:backgroundTint="@color/thirdcolor"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_marginTop="180dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnForgotPassword"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btn_signin"
        app:cornerRadius="4dp"
        android:textAllCaps="false"/>

    <RelativeLayout
        android:layout_below="@id/btnsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/no_account"
            android:text="@string/btn_register"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:textColor="@color/thirdcolor"/>

    </RelativeLayout>






</RelativeLayout>