<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="120dp">

    <TextView
        android:id="@+id/txt_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txt_regist"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_logindesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_regist"
        android:layout_centerInParent="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/register_desc"
        android:textColor="@color/black20"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_logindesc"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="80dp"
        android:background="@color/secondarycolor"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/edit_username"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_username"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/secondarycolor"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/secondarycolor"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_repeatpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/secondarycolor"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/edit_repeatpassword"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnsignup"
        android:backgroundTint="@color/thirdcolor"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_repeatpassword"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btn_signup"
        android:textAllCaps="false"
        app:cornerRadius="4dp"/>

    <RelativeLayout
        android:layout_below="@id/btnsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/have_account"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/btn_login"
            android:textColor="#0288D1"
            android:textSize="14sp" />

    </RelativeLayout>






</RelativeLayout>