<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="120dp">

    <TextView
        android:id="@+id/txt_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txt_reset"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_resetdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_reset"
        android:layout_centerInParent="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/reset_desc"
        android:textColor="@color/black20"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="12dp"
        android:layout_below="@+id/txt_resetdesc"
        android:layout_marginTop="120dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondarycolor"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/edit_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnreset"
        android:backgroundTint="@color/thirdcolor"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputlayout"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btn_reset"
        android:textAllCaps="false"
        app:cornerRadius="4dp"/>

    <TextView
        android:id="@+id/btn_backsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/btnreset"/>


</RelativeLayout>