<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GetStartedActivity"
    android:background="@drawable/banner1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/blacktransparent"
        android:paddingHorizontal="8dp"
        android:paddingVertical="32dp">

        <TextView
            android:id="@+id/txt_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/desc_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_judul"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/txt_desc"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_getstarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc_judul"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/secondarycolor"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="12dp"
            android:text="@string/btn_getstarted"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="12dp" />
    </RelativeLayout>

</RelativeLayout>